--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d3252283",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.11/site-packages/torch/utils/cpp_extension.py:1964: UserWarning: TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
+      "If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'].\n",
+      "  warnings.warn(\n",
+      "/opt/conda/lib/python3.11/site-packages/pyvista/plotting/utilities/xvfb.py:48: PyVistaDeprecationWarning: This function is deprecated and will be removed in future version of PyVista. Use vtk-osmesa instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from atom3d import MeshBVH\n",
@@ -21,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2f068874",
    "metadata": {},
    "outputs": [],
@@ -37,13 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "22be49e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000], device='cuda:0')\n"
+     ]
+    }
+   ],
    "source": [
-    "face_min, face_max = bvh.get_face_aabb()\n",
-    "candidates_ijk = grid_indexer.octree_traverse(face_min, face_max)\n",
+    "candidates_ijk = grid_indexer.octree_traverse(bvh)\n",
     "candidates_idx = grid_indexer.ijk_to_cube(candidates_ijk)\n",
     "\n",
     "\n",
