Feat: Implement internal CUDA BVH

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -10,9 +10,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.11/site-packages/torch/utils/cpp_extension.py:1964: UserWarning: TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
-      "If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'].\n",
-      "  warnings.warn(\n",
       "/opt/conda/lib/python3.11/site-packages/pyvista/plotting/utilities/xvfb.py:48: PyVistaDeprecationWarning: This function is deprecated and will be removed in future version of PyVista. Use vtk-osmesa instead.\n",
       "  warnings.warn(\n"
      ]
@@ -43,7 +40,7 @@
     "F = torch.tensor(meshtem.faces, dtype=torch.int32)\n",
     "\n",
     "bvh = MeshBVH(V, F, device='cuda')\n",
-    "res = 32\n",
+    "res = 512\n",
     "grid_indexer = OctreeIndexer(max_level=int(np.log2(res)), bounds=bvh.get_bounds(), device='cuda')\n"
    ]
   },
@@ -57,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000], device='cuda:0')\n"
+      "tensor([1., 1., 1.,  ..., 1., 1., 1.], device='cuda:0')\n"
      ]
     }
    ],
@@ -81,10 +78,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7bed4931",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06297a0cbb42428ab318464d0a0a2e6d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "EmbeddableWidget(value='<iframe srcdoc=\"<!DOCTYPE html>\\n<html>\\n  <head>\\n    <meta http-equiv=&quot;Content-…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "pl = pv.Plotter()\n",
     "pl.add_mesh(meshtem, show_edges=True, opacity=0.1)\n",
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "84d88fe7",
    "metadata": {},
    "outputs": [],
@@ -108,10 +120,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "19f38d83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total intersections: 1172044\n",
+      "poly_counts range: 3 - 7\n",
+      "Valid polygons: 1172044\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8084a710c0f7499cbe1743b63f5e8afa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "EmbeddableWidget(value='<iframe srcdoc=\"<!DOCTYPE html>\\n<html>\\n  <head>\\n    <meta http-equiv=&quot;Content-…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "voxel_min, voxel_max = grid_indexer.cube_aabb_level(candidates_ijk)\n",
     "result = bvh.intersect_aabb(voxel_min, voxel_max, mode=3)\n",
@@ -159,12 +195,20 @@
     "    mesh.cell_data['voxel_id'] = np.array(all_aabb_ids)\n",
     "    \n",
     "    pl = pv.Plotter()\n",
-    "    pl.add_mesh(mesh, show_edges=True, scalars='face_id', cmap='tab20', opacity=0.8)\n",
+    "    pl.add_mesh(mesh, show_edges=True, scalars='voxel_id', cmap='tab20', opacity=0.8)\n",
     "    pl.add_mesh(meshtem, opacity=0.2, color='gray')\n",
     "    pl.show()\n",
     "else:\n",
     "    print(\"No valid polygons!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e73bf1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
